# SHL_Recomender

./: .dockerignore  Approach.md  Dockerfile  README.md  catalog_prepared.json  config.py  llm.py  main.py  prepare_catalog.py  prompt.py  pyproject.toml  requirements.txt  retriever.py  test_runner.py
Documentation/: test_cases.md
