[project]
name = "shl"
version = "0.1.0"
description = "SHL Assessment Retriever"
authors = [
    {name = "Shivam Bajaj"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "google-genai (>=2.10.0,<3.0.0)",
    "google-cloud-aiplatform (>=1.159.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
